[package]
name = "bevy_pathfinding"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

web = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_webgl2",
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_webgl2 = { version = "0.5.0", optional = true }
pathfinding = "2.1"
